--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
+    "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0"
   },
   "engines": {
